--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+altair==5.5.0
 anyio==4.10.0
+appnope==0.1.4
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
 arrow==1.3.0
@@ -8,6 +10,8 @@ attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.5
 bleach==6.2.0
+blinker==1.9.0
+cachetools==6.2.0
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
@@ -22,6 +26,8 @@ executing==2.2.1
 fastjsonschema==2.21.2
 fonttools==4.60.0
 fqdn==1.5.1
+gitdb==4.0.12
+GitPython==3.1.45
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -54,6 +60,7 @@ MarkupSafe==3.0.2
 matplotlib==3.10.6
 matplotlib-inline==0.1.7
 mistune==3.1.4
+narwhals==2.5.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -71,10 +78,13 @@ pillow==11.3.0
 platformdirs==4.4.0
 prometheus_client==0.22.1
 prompt_toolkit==3.0.52
+protobuf==6.32.1
 psutil==7.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==21.0.0
 pycparser==2.23
+pydeck==0.9.1
 Pygments==2.19.2
 pyparsing==3.2.4
 python-dateutil==2.9.0.post0
@@ -95,12 +105,16 @@ seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools==80.9.0
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.8
 stack-data==0.6.3
+streamlit==1.50.0
+tenacity==9.1.2
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
+toml==0.10.2
 tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
@@ -113,3 +127,4 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+xgboost==3.0.5
